codingkid.ninja v2.1. Please see site for more information.

--- a/about.html
+++ b/about.html
@@ -2,71 +2,83 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About this site | codingkid.ninja</title>
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <link href="main-style.css" rel="stylesheet">
   </head>
   <body>
-    <div id="header">
-      <h3 style="text-align: left;" class="whatdoicallit"><img src="mb1.svg" style="width: 500px; height: 100px;"
-          title="codingkid.ninja" alt="codingkid.ninja logo"><a href="index.html">Home</a>&nbsp;|&nbsp;
-        <a href="stuff.html">Projects</a>&nbsp;|&nbsp; <a href="https://github.com/Merlin04">Github</a><span
-          style="color: #0000ee;">&nbsp;</span> |&nbsp; <a href="Hello%20World%21.html">Test
-          page</a>&nbsp;|&nbsp; <a href="http://codingkid.weebly.com">Old site</a>
-      </h3>
+    <ul class="navigation">
+      <li class="nav-item"><a href="index.html">Home</a></li>
+      <li class="nav-item"><a href="stuff.html">Projects</a></li>
+      <li class="nav-item"><a href="https://github.com/merlin04">Github</a></li>
+      <li class="nav-item"><a href="Hello%20World%21.html">Test page</a></li>
+      <li class="nav-item"><a href="http://codingkid.weebly.com">Old site</a></li>
+    </ul>
+    <input id="nav-trigger" class="nav-trigger" type="checkbox"> <label for="nav-trigger"></label>
+    <div class="site-wrap">
+      <div id="header">
+        <h3 style="text-align: left;" class="whatdoicallit"><img class="logo" src="mb1.svg"
+            title="codingkid.ninja" alt="codingkid.ninja logo"><a href="index.html">Home</a>&nbsp;|&nbsp;
+          <a href="stuff.html">Projects</a>&nbsp;|&nbsp; <a href="https://github.com/Merlin04">Github</a><span
+            style="color: #0000ee;">&nbsp;</span> |&nbsp; <a href="Hello%20World%21.html">Test
+            page</a>&nbsp;|&nbsp; <a href="http://codingkid.weebly.com">Old
+            site</a> </h3>
+        <h3 style="text-align: center;" class="hamburger-bar">codingkid.ninja</h3>
+      </div>
+      <span style="font-family: Comfortaa, Verdana;"> </span>
+      <p><span style="font-family: Comfortaa, Verdana;">You might want to know a
+          bit about this website and why it was created. Here's the info you are
+          looking for:</span></p>
+      <h2><span style="font-family: Comfortaa, Verdana;">The start of
+          codingkid.ninja</span></h2>
+      <p>codingkid.ninja originally started out as a blog-format website at
+        codingkid.weebly.com. (It still exists, under "old site" in menu bar) I
+        found it time-consuming to write posts for it, so it was not updated
+        much. I decided to move away from using Weebly because I would have to
+        pay to hook up my domain name, and because of the lack of customization
+        (compared to just writing HTML). Back when I used the Weebly site,
+        codingkid.ninja redirected to codingkid.weebly.com. I eventually
+        realized that I could use Github Pages with my domain name, so I started
+        on my new website. The first prototype was bad; just a plain white page
+        with the "Purisa" font. No pictures. Eventually, I got to this. </p>
+      <h2>How I built it</h2>
+      <p>I use Github Pages to host this site, which is licensed under MIT
+        license. I was able to hook up my name.com domain name to the site,
+        allowing the page to seem like any other (but hosted by Github). I build
+        the site with BlueGriffon, but code most of it manually. I use Inkscape
+        for the images. I have used several online tutorials and StackExchange
+        questions to help me with the perplexing world of website building. </p>
+      <h2>Look Ma, no ads!</h2>
+      <p>You may have noticed that this site has no ads. I don't like ads, and
+        always use an adblocker (and Privacy Badger, Noscript). I think that it
+        is pointless to add ads if no one will ever click on them. I also find
+        them intrusive and annoying. </p>
+      <h2>But what about the ad for MOO.com?</h2>
+      <p>That is just me recommending them. I choose to put it on my site. Full
+        disclosure: I do get $15 off an order when you use my link to buy
+        things. The recommendation is not intrusive, so I believe that it is OK
+        to have on my site. </p>
+      <h2>Privacy Policy (in plain English)</h2>
+      <p>In short, I will never track you. I believe that tracking is bad. The
+        only cookies that this site will leave are from the theme changer, so it
+        can remember what theme you used previously. This feature hasn't been
+        implemented yet, so for now, this website is cookie-free! I may someday
+        add a system that logs how many visitors I get. This would not collect
+        any information identifying you, it would only add one to a counter, and
+        maybe leave a cookie so you are not counted twice. </p>
+      <h2>Who am I?</h2>
+      <p>I go by Merlin04 on some sites, and codingkid.ninja on others. I prefer
+        to remain anonymous. I can tell you that I am a kid who likes coding and
+        making things. My favorite language is Python, as you could probably
+        tell from the background. I am not a big fan of JavaScript, although I
+        admit that I haven't done much with it. I definitely don't like Java. </p>
+      <h2>How do I make money from this site?</h2>
+      <p>I don<span style="font-family: Comfortaa, Verdana;"></span><span style="font-family: Comfortaa,Verdana;">'t.
+          I pay ~$20 a year for the domain. Someday I will get a Patreon page,
+          so you can give money to me. :-)</span></p>
+      <p><span style="font-family: Comfortaa, Verdana;"></span><span style="font-family: Comfortaa, Verdana;"></span>
+      </p>
     </div>
-    <span style="font-family: Comfortaa, Verdana;"> </span>
-    <p><span style="font-family: Comfortaa, Verdana;">You might want to know a
-        bit about this website and why it was created. Here's the info you are
-        looking for:</span></p>
-    <h2><span style="font-family: Comfortaa, Verdana;">The start of
-        codingkid.ninja</span></h2>
-    <p>codingkid.ninja originally started out as a blog-format website at
-      codingkid.weebly.com. (It still exists, under "old site" in menu bar) I
-      found it time-consuming to write posts for it, so it was not updated much.
-      I decided to move away from using Weebly because I would have to pay to
-      hook up my domain name, and because of the lack of customization (compared
-      to just writing HTML). Back when I used the Weebly site, codingkid.ninja
-      redirected to codingkid.weebly.com. I eventually realized that I could use
-      Github Pages with my domain name, so I started on my new website. The
-      first prototype was bad; just a plain white page with the "Purisa" font.
-      No pictures. Eventually, I got to this. </p>
-    <h2>How I built it</h2>
-    <p>I use Github Pages to host this site, which is licensed under MIT
-      license. I was able to hook up my name.com domain name to the site,
-      allowing the page to seem like any other (but hosted by Github). I build
-      the site with BlueGriffon, but code most of it manually. I use Inkscape
-      for the images. I have used several online tutorials and StackExchange
-      questions to help me with the perplexing world of website building. </p>
-    <h2>Look Ma, no ads!</h2>
-    <p>You may have noticed that this site has no ads. I don't like ads, and
-      always use an adblocker (and Privacy Badger, Noscript). I think that it is
-      pointless to add ads if no one will ever click on them. I also find them
-      intrusive and annoying. </p>
-    <h2>But what about the ad for MOO.com?</h2>
-    <p>That is just me recommending them. I choose to put it on my site. Full
-      disclosure: I do get $15 off an order when you use my link to buy things.
-      The recommendation is not intrusive, so I believe that it is OK to have on
-      my site. </p>
-    <h2>Privacy Policy (in plain English)</h2>
-    <p>In short, I will never track you. I believe that tracking is bad. The
-      only cookies that this site will leave are from the theme changer, so it
-      can remember what theme you used previously. This feature hasn't been
-      implemented yet, so for now, this website is cookie-free! I may someday
-      add a system that logs how many visitors I get. This would not collect any
-      information identifying you, it would only add one to a counter, and maybe
-      leave a cookie so you are not counted twice. </p>
-    <h2>Who am I?</h2>
-    <p>I go by Merlin04 on some sites, and codingkid.ninja on others. I prefer
-      to remain anonymous. I can tell you that I am a kid who likes coding and
-      making things. My favorite language is Python, as you could probably tell
-      from the background. I am not a big fan of JavaScript, although I admit
-      that I haven't done much with it. I definitely don't like Java. </p>
-    <h2>How do I make money from this site?</h2>
-    <p>I don<span style="font-family: Comfortaa, Verdana;"></span><span style="font-family: Comfortaa,Verdana;">'t.
-        I pay ~$20 a year for the domain. Someday I will get a Patreon page, so
-        you can give money to me. :-)</span></p>
-    <p><span style="font-family: Comfortaa, Verdana;"></span><span style="font-family: Comfortaa, Verdana;"></span>
-    </p>
   </body>
 </html>
