--- a/poly.html
+++ b/poly.html
@@ -2,46 +2,59 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dividing Polynomials | codingkid.ninja</title>
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <link href="main-style.css" rel="stylesheet">
   </head>
   <body>
-    <div id="header">
-      <h3 style="text-align: left;" class="whatdoicallit"><img src="mb1.svg" style="width: 500px; height: 100px;"
-          title="codingkid.ninja" alt="codingkid.ninja logo"><a href="index.html">Home</a>&nbsp;|&nbsp;
-        <a href="stuff.html">Projects</a>&nbsp;|&nbsp; <a href="https://github.com/Merlin04">Github</a><span
-          style="color: #0000ee;">&nbsp;</span> |&nbsp; <a href="Hello%20World%21.html">Test
-          page</a>&nbsp;|&nbsp; <a href="http://codingkid.weebly.com">Old site</a>
-      </h3>
+    <ul class="navigation">
+      <li class="nav-item"><a href="index.html">Home</a></li>
+      <li class="nav-item"><a href="stuff.html">Projects</a></li>
+      <li class="nav-item"><a href="https://github.com/merlin04">Github</a></li>
+      <li class="nav-item"><a href="Hello%20World%21.html">Test page</a></li>
+      <li class="nav-item"><a href="http://codingkid.weebly.com">Old site</a></li>
+    </ul>
+    <input id="nav-trigger" class="nav-trigger" type="checkbox"> <label for="nav-trigger"></label>
+    <div class="site-wrap">
+      <div id="header">
+        <h3 style="text-align: left;" class="whatdoicallit"><img class="logo"
+            src="mb1.svg" title="codingkid.ninja" alt="codingkid.ninja logo"><a
+            href="index.html">Home</a>&nbsp;|&nbsp; <a href="stuff.html">Projects</a>&nbsp;|&nbsp;
+          <a href="https://github.com/Merlin04">Github</a><span style="color: #0000ee;">&nbsp;</span>
+          |&nbsp; <a href="Hello%20World%21.html">Test page</a>&nbsp;|&nbsp; <a
+            href="http://codingkid.weebly.com">Old site</a> </h3>
+        <h3 style="text-align: center;" class="hamburger-bar">codingkid.ninja</h3>
+      </div>
+      <span style="font-family: Comfortaa, Verdana;"> </span>
+      <p><span style="font-family: Comfortaa, Verdana;"><br>
+        </span> </p>
+      <span style="font-family: Comfortaa, Verdana;"> </span> <span style="font-family: Comfortaa,Verdana;">If
+        you're like me, then you are struggling with dividing polynomials. <strong>Fear
+          no more</strong> - the Dividing Polynomials Chart (R) is
+        here to help you! <br>
+        <br>
+        <img style="width: 667px; height: 459px;" title="The Amazing Chart" alt="An amazing chart. "
+          src="quotient-poly.png"><br>
+        <br>
+        FAQs: <br>
+        <br>
+        Q: Much wow, very HD, incredible help, great genius, so professional,
+        wow.<br>
+        A: doge<br>
+        <br>
+        Q: What program did you use to make it?<br>
+        A: I used KolourPaint, with a "u" and a "k'. <br>
+        <br>
+        Q: What license?<br>
+        A: This entire site is under MIT license! See my Github for more info on
+        license. <br>
+        <br>
+        Q: Where's the problem from?<br>
+        A: Thinkwell Homeschool's Algebra 1. <br>
+      </span>
+      <p><span style="font-family: Comfortaa, Verdana;"></span><span style="font-family: Comfortaa, Verdana;"></span>
+      </p>
     </div>
-    <span style="font-family: Comfortaa, Verdana;"> </span>
-    <p><span style="font-family: Comfortaa, Verdana;"><br>
-      </span> </p>
-    <span style="font-family: Comfortaa, Verdana;"> </span> <span style="font-family: Comfortaa,Verdana;">If
-      you're like me, then you are struggling with dividing polynomials. <strong>Fear
-        no more</strong> - the Dividing Polynomials Chart (R) is here to help
-      you! <br>
-      <br>
-      <img style="width: 667px; height: 459px;" title="The Amazing Chart" alt="An amazing chart. "
-        src="quotient-poly.png"><br>
-      <br>
-      FAQs: <br>
-      <br>
-      Q: Much wow, very HD, incredible help, great genius, so professional, wow.<br>
-      A: doge<br>
-      <br>
-      Q: What program did you use to make it?<br>
-      A: I used KolourPaint, with a "u" and a "k'. <br>
-      <br>
-      Q: What license?<br>
-      A: This entire site is under MIT license! See my Github for more info on
-      license. <br>
-      <br>
-      Q: Where's the problem from?<br>
-      A: Thinkwell Homeschool's Algebra 1. <br>
-    </span>
-    <p><span style="font-family: Comfortaa, Verdana;"></span><span style="font-family: Comfortaa, Verdana;"></span>
-    </p>
   </body>
 </html>
