--- a/stuff.html
+++ b/stuff.html
@@ -2,18 +2,29 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Projects | codingkid.ninja</title>
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <link href="main-style.css" rel="stylesheet">
   </head>
   <body>
+    <ul class="navigation">
+      <li class="nav-item"><a href="index.html">Home</a></li>
+      <li class="nav-item"><a href="stuff.html">Projects</a></li>
+      <li class="nav-item"><a href="https://github.com/merlin04">Github</a></li>
+      <li class="nav-item"><a href="Hello%20World%21.html">Test page</a></li>
+      <li class="nav-item"><a href="http://codingkid.weebly.com">Old site</a></li>
+    </ul>
+    <input id="nav-trigger" class="nav-trigger" type="checkbox"> <label for="nav-trigger"></label>
+    <div class="site-wrap">
     <div id="header">
-      <h3 style="text-align: left;" class="whatdoicallit"><img src="mb1.svg" style="width: 500px; height: 100px;"
+      <h3 style="text-align: left;" class="whatdoicallit"><img class="logo" src="mb1.svg"
           title="codingkid.ninja" alt="codingkid.ninja logo"><a href="index.html">Home</a>&nbsp;|
         Projects&nbsp;|&nbsp; <a href="https://github.com/Merlin04">Github</a><span
           style="color: #0000ee;">&nbsp;</span> |&nbsp; <a href="Hello%20World%21.html">Test
           page</a>&nbsp;|&nbsp; <a href="http://codingkid.weebly.com">Old site</a>
       </h3>
+      <h3 style="text-align: center;" class="hamburger-bar">codingkid.ninja</h3>
     </div>
     <p><span>My various projects. <br>
       </span></p>
@@ -33,11 +44,11 @@
       Page coming soon!<br>
       <strong><br>
         Other not-as-important projects:</strong><br>
-      &nbsp;- <a href="poly.html">Dividing
-        polynomials reference</a><br>
-      &nbsp;- <a href="logic.html">"Logical
-        Increments" style chart for Game Boy Zero</a> (Unfinished, may never be
-      finished. I have many other projects to work on!)<br>
+      &nbsp;- <a href="poly.html">Dividing polynomials reference</a><br>
+      &nbsp;- <a href="logic.html">"Logical Increments" style chart for Game
+        Boy Zero</a> (Unfinished, may never be finished. I have many other
+      projects to work on!)<br>
     </span>
+    </div>
   </body>
 </html>
