--- a/updates.html
+++ b/updates.html
@@ -3,20 +3,41 @@
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+    <link href="main-style.css" rel="stylesheet">
     <title>Updates</title>
   </head>
-  <body><span style="font-family: Comfortaa, Verdana;"> </span>
-    <h2><span style="font-family: Comfortaa, Verdana;">Updates</span></h2>
-    <span style="font-family: Comfortaa, Verdana;">Updated the home page to add
-      Updates and Portal.</span>
-    <p><span style="font-family: Comfortaa, Verdana;">12-31-16</span></p>
-    <p><span style="font-family: Comfortaa, Verdana;"></span></p>
+  <body><span> </span>
+    <h2><span>Updates</span></h2>
+    <p>codingkid.ninja v2.0</p>
+    <p>I have been trying to make the codingkid.ninja website look better. After
+      lots of work, I have come up with what you see here. Here is what changed:</p>
+    <p>&nbsp;+ Changed "Stuff" to "<a href="stuff.html">Projects</a>"</p>
+    <p>&nbsp;+ Created logo</p>
+    <p>&nbsp;+ Added new menu bar</p>
+    <p>&nbsp;+ WIP: theme changer</p>
+    <p>&nbsp;+ "Updates" and "Portal" are no longer iframes, and are now in
+      columns. </p>
+    <p>&nbsp;+ Revised description of site</p>
+    <p>&nbsp;+ Added carousel</p>
+    <p>&nbsp;+ Created a shared CSS file</p>
+    <p>&nbsp;+ Added a "View past updates" button in the "Updates" column.</p>
+    <p>&nbsp;+ Created "<a href="about.html">About website</a>" page<br>
+    </p>
+    <p>&nbsp;- Less mobile friendly, solution (hopefully) coming soon. </p>
+    <p>Internal changes:</p>
+    <p>&nbsp;+ Created new local folder for the website with no unneeded files</p>
+    <p>&nbsp;+ I got much better at CSS</p>
+    2-24-17<br>
+    <span><span></span> </span>
+    <p><span></span></p>
+    <hr><span>Updated the home page to add Updates and Portal.</span>
+    <p><span>12-31-16</span></p>
+    <p><span></span></p>
     <hr>
-    <p><span style="font-family: Comfortaa, Verdana;">Finally added code boxes
-        to the "USBChuck" page using iframes. <br>
+    <p><span>Finally added code boxes to the "USBChuck" page using iframes. <br>
       </span></p>
-    <p><span style="font-family: Comfortaa, Verdana;">12-31-16<br>
+    <p><span>12-31-16<br>
       </span></p>
-    <span style="font-family: Comfortaa, Verdana;"> </span>
+    <span> </span>
   </body>
 </html>
