--- a/usbchuck.html
+++ b/usbchuck.html
@@ -2,26 +2,37 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>USBChuck | codingkid.ninja</title>
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <link href="main-style.css" rel="stylesheet">
   </head>
   <body>
+    <ul class="navigation">
+      <li class="nav-item"><a href="index.html">Home</a></li>
+      <li class="nav-item"><a href="stuff.html">Projects</a></li>
+      <li class="nav-item"><a href="https://github.com/merlin04">Github</a></li>
+      <li class="nav-item"><a href="Hello%20World%21.html">Test page</a></li>
+      <li class="nav-item"><a href="http://codingkid.weebly.com">Old site</a></li>
+    </ul>
+    <input id="nav-trigger" class="nav-trigger" type="checkbox"> <label for="nav-trigger"></label>
+    <div class="site-wrap">
     <div id="header">
-      <h3 style="text-align: left;" class="whatdoicallit"><img src="mb1.svg" style="width: 500px; height: 100px;"
+      <h3 style="text-align: left;" class="whatdoicallit"><img class="logo" src="mb1.svg" style="width: 500px; height: 100px;"
           title="codingkid.ninja" alt="codingkid.ninja logo"><a href="index.html">Home</a>&nbsp;|&nbsp;
         <a href="stuff.html">Projects</a>&nbsp;|&nbsp; <a href="https://github.com/Merlin04">Github</a><span
           style="color: #0000ee;">&nbsp;</span> |&nbsp; <a href="Hello%20World%21.html">Test
           page</a>&nbsp;|&nbsp; <a href="http://codingkid.weebly.com">Old site</a>
       </h3>
+      <h3 style="text-align: center;" class="hamburger-bar">codingkid.ninja</h3>
     </div>
     <p><span style="font-family: Comfortaa, Verdana;"><br>
         I recently got the idea to make a smaller iTapStick. The iTapStick is a
         Wii Nunchuck that is a mouse using USB: <a class="postlink" href="https://learn.adafruit.com/nunchuket-kung-fu-pc-video-game-fighting-stick/play?view=all">https://learn.adafruit.com/nunchuket-ku
           ... y?view=all</a><br>
         The way I would make it smaller is put the Pro Trinket inside the Wii
-        Nunchuck, not as a separate board the Nunchuck plugs into. I call it the
-        USBChuck. <br>
+        Nunchuck, not as a separate board the Nunchuck plugs into. I
+        call it the USBChuck. <br>
         <br>
       </span></p>
     <div class="inline-attachment">
@@ -31,8 +42,8 @@
       </dl>
     </div>
     <span style="font-family: Comfortaa, Verdana;"><br>
-      The Nunchuck is surprisingly empty, and has just enough space
-      for a Trinket...<br>
+      The Nunchuck is surprisingly empty, and has just enough space for a
+      Trinket...<br>
       <br>
     </span>
     <div class="inline-attachment">
@@ -76,5 +87,6 @@
       height="400" width="700">Your browser doesn't support iframes, which is
       odd. </iframe> <span style="font-family: Comfortaa, Verdana;"><br>
     </span>
+    </div>
   </body>
 </html>
