Fix a resizing glitch

--- a/usbchuck.html
+++ b/usbchuck.html
@@ -15,78 +15,78 @@
       <li class="nav-item"><a href="Hello%20World%21.html">Test page</a></li>
       <li class="nav-item"><a href="http://codingkid.weebly.com">Old site</a></li>
     </ul>
-    <input id="nav-trigger" class="nav-trigger" type="checkbox"> <label for="nav-trigger"></label>
+    <input id="nav-trigger" class="nav-trigger" type="checkbox"> <label
+      for="nav-trigger"></label>
     <div class="site-wrap">
-    <div id="header">
-      <h3 style="text-align: left;" class="whatdoicallit"><img class="logo" src="mb1.svg" style="width: 500px; height: 100px;"
-          title="codingkid.ninja" alt="codingkid.ninja logo"><a href="index.html">Home</a>&nbsp;|&nbsp;
-        <a href="stuff.html">Projects</a>&nbsp;|&nbsp; <a href="https://github.com/Merlin04">Github</a><span
-          style="color: #0000ee;">&nbsp;</span> |&nbsp; <a href="Hello%20World%21.html">Test
-          page</a>&nbsp;|&nbsp; <a href="http://codingkid.weebly.com">Old site</a>
-      </h3>
-      <h3 style="text-align: center;" class="hamburger-bar">codingkid.ninja</h3>
-    </div>
-    <p><span style="font-family: Comfortaa, Verdana;"><br>
-        I recently got the idea to make a smaller iTapStick. The iTapStick is a
-        Wii Nunchuck that is a mouse using USB: <a class="postlink" href="https://learn.adafruit.com/nunchuket-kung-fu-pc-video-game-fighting-stick/play?view=all">https://learn.adafruit.com/nunchuket-ku
-          ... y?view=all</a><br>
-        The way I would make it smaller is put the Pro Trinket inside the Wii
-        Nunchuck, not as a separate board the Nunchuck plugs into. I
-        call it the USBChuck. <br>
+      <div id="header">
+        <h3 style="text-align: left;" class="whatdoicallit"><img class="logo" src="mb1.svg"
+            title="codingkid.ninja" alt="codingkid.ninja logo"><a
+            href="index.html">Home</a>&nbsp;|&nbsp; <a href="stuff.html">Projects</a>&nbsp;|&nbsp;
+          <a href="https://github.com/Merlin04">Github</a><span style="color: #0000ee;">&nbsp;</span>
+          |&nbsp; <a href="Hello%20World%21.html">Test page</a>&nbsp;|&nbsp; <a
+            href="http://codingkid.weebly.com">Old site</a> </h3>
+        <h3 style="text-align: center;" class="hamburger-bar">codingkid.ninja</h3>
+      </div>
+      <p><span style="font-family: Comfortaa, Verdana;"><br>
+          I recently got the idea to make a smaller iTapStick. The iTapStick is
+          a Wii Nunchuck that is a mouse using USB: <a class="postlink" href="https://learn.adafruit.com/nunchuket-kung-fu-pc-video-game-fighting-stick/play?view=all">https://learn.adafruit.com/nunchuket-ku
+            ... y?view=all</a><br>
+          The way I would make it smaller is put the Pro Trinket inside the Wii
+          Nunchuck, not as a separate board the Nunchuck plugs into. I call it
+          the USBChuck. <br>
+          <br>
+        </span></p>
+      <div class="inline-attachment">
+        <dl class="file">
+          <dt class="attach-image"><span style="font-family: Comfortaa, Verdana;"><img
+                src="http://www.sudomod.com/forum/download/file.php?id=1778"></span></dt>
+        </dl>
+      </div>
+      <span style="font-family: Comfortaa, Verdana;"><br>
+        The Nunchuck is surprisingly empty, and has just enough space for a
+        Trinket...<br>
         <br>
-      </span></p>
-    <div class="inline-attachment">
-      <dl class="file">
-        <dt class="attach-image"><span style="font-family: Comfortaa, Verdana;"><img
-              src="http://www.sudomod.com/forum/download/file.php?id=1778"></span></dt>
-      </dl>
-    </div>
-    <span style="font-family: Comfortaa, Verdana;"><br>
-      The Nunchuck is surprisingly empty, and has just enough space for a
-      Trinket...<br>
-      <br>
-    </span>
-    <div class="inline-attachment">
-      <dl class="file">
-        <dt class="attach-image"><span style="font-family: Comfortaa, Verdana;"><img
-              style="width: 659px; height: 491px;" src="http://www.sudomod.com/forum/download/file.php?id=1779"></span><span
-            style="font-family: Comfortaa, Verdana;"></span><br>
-          <span style="font-family: Comfortaa, Verdana;"></span></dt>
-      </dl>
-    </div>
-    <span style="font-family: Comfortaa, Verdana;"><br>
-      However, there is lots of support structure that gets in the way of the
-      Trinket. I will have time to cut the support structure in a few days. <br>
-      <br>
-      I checked the printed labels on the board for the wires, and despite the
-      confusing wire colors (red for ground? What were they thinking?) they are
-      correct. My wirings are as follows:<br>
-      Red --&gt; A2<br>
-      Green --&gt; A3<br>
-      Yellow --&gt; A4<br>
-      White --&gt; A5<br>
-      Black --&gt; NC<br>
-      <br>
-      I have no idea what the black wire does.<br>
-      <br>
-      I made some simple cuts of the support structure, and soldered the wires
-      from the Nunchuck to the Pro Trinket. I also had to cut some of the casing
-      off of my USB cable. Then, I added Sugru to hold things together and to
-      protect the wires. I also put electrical tape on the end of the mystery
-      black wire and left it in the Nunchuck.<br>
-      <br>
-    </span><br>
-    <span style="font-family: Comfortaa, Verdana;"><img style="width: 560px; height: 417px;"
-        src="http://www.sudomod.com/forum/download/file.php?id=1818"><br>
-      Now time for the code!<br>
-      I have been modifing the iTapStick code from Adafruit. So far I have made
-      the mouse easier to control, and added click-and-drag. Soon, I will add
-      basic acceleration. Here is my modified code:<br>
-    </span> <iframe src="code/itapstick-ino.html" height="400" width="700">Your
-      browser doesn't support iframes, which is odd. </iframe> <iframe src="code/wiinunchuk-h.html"
-      height="400" width="700">Your browser doesn't support iframes, which is
-      odd. </iframe> <span style="font-family: Comfortaa, Verdana;"><br>
-    </span>
-    </div>
+      </span>
+      <div class="inline-attachment">
+        <dl class="file">
+          <dt class="attach-image"><span style="font-family: Comfortaa, Verdana;"><img
+                style="width: 659px; height: 491px;" src="http://www.sudomod.com/forum/download/file.php?id=1779"></span><span
+              style="font-family: Comfortaa, Verdana;"></span><br>
+            <span style="font-family: Comfortaa, Verdana;"></span></dt>
+        </dl>
+      </div>
+      <span style="font-family: Comfortaa, Verdana;"><br>
+        However, there is lots of support structure that gets in the way of the
+        Trinket. I will have time to cut the support structure in a few days. <br>
+        <br>
+        I checked the printed labels on the board for the wires, and despite the
+        confusing wire colors (red for ground? What were they thinking?) they
+        are correct. My wirings are as follows:<br>
+        Red --&gt; A2<br>
+        Green --&gt; A3<br>
+        Yellow --&gt; A4<br>
+        White --&gt; A5<br>
+        Black --&gt; NC<br>
+        <br>
+        I have no idea what the black wire does.<br>
+        <br>
+        I made some simple cuts of the support structure, and soldered the wires
+        from the Nunchuck to the Pro Trinket. I also had to cut some of the
+        casing off of my USB cable. Then, I added Sugru to hold things together
+        and to protect the wires. I also put electrical tape on the end of the
+        mystery black wire and left it in the Nunchuck.<br>
+        <br>
+      </span><br>
+      <span style="font-family: Comfortaa, Verdana;"><img style="width: 560px; height: 417px;"
+          src="http://www.sudomod.com/forum/download/file.php?id=1818"><br>
+        Now time for the code!<br>
+        I have been modifing the iTapStick code from Adafruit. So far I have
+        made the mouse easier to control, and added click-and-drag. Soon, I will
+        add basic acceleration. Here is my modified code:<br>
+      </span> <iframe src="code/itapstick-ino.html" height="400" width="700">Your
+        browser doesn't support iframes, which is odd. </iframe> <iframe src="code/wiinunchuk-h.html"
+        height="400" width="700">Your browser doesn't support iframes, which is
+        odd. </iframe> <span style="font-family: Comfortaa, Verdana;"><br>
+      </span> </div>
   </body>
 </html>
