codingkid.ninja v2.4 - See home page for more information

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <ul class="navigation">
       <li class="nav-item"><a href="index.html">Home</a></li>
       <li class="nav-item"><a href="stuff.html">Projects</a></li>
+      <li class="nav-item"><a href="reviews.html">Reviews</a></li>
       <li class="nav-item"><a href="https://github.com/merlin04">Github</a></li>
       <li class="nav-item"><a href="Hello%20World%21.html">Test page</a></li>
       <li class="nav-item"><a href="http://codingkid.weebly.com">Old site</a></li>
@@ -27,8 +28,9 @@
     <div class="site-wrap">
       <div id="header">
         <h3 style="text-align: left;" class="whatdoicallit"><img class="logo" src="mb1.svg"
-            title="codingkid.ninja" alt="codingkid.ninja logo">Home |&nbsp; <a
-            href="stuff.html">Projects</a>&nbsp;|&nbsp; <a href="https://github.com/Merlin04">Github</a><span
+            title="codingkid.ninja" alt="codingkid.ninja logo">Home&nbsp;|&nbsp;
+          <a title="Projects" href="stuff.html"> Projects</a>&nbsp;|&nbsp; <a title="Reviews"
+            href="reviews.html">Reviews</a>&nbsp;|&nbsp; <a href="https://github.com/Merlin04">Github</a><span
             style="color: #0000ee;">&nbsp;</span> |&nbsp; <a href="Hello%20World%21.html">Test
             page</a>&nbsp;|&nbsp; <a href="http://codingkid.weebly.com">Old
             site</a> </h3>
@@ -37,17 +39,17 @@
       <div id="content">
         <div class="sidebar sb1">
           <h2>Updates</h2>
-          <p>codingkid.ninja v2.1</p>
-          <p>Just a day after v2.0, I have another update! Here's what changed:</p>
-          <p>&nbsp;+ Responsive design</p>
-          <p>&nbsp;+ Mobile device friendly</p>
-          <p>&nbsp;+ Updates page now uses shared CSS file</p>
-          <p>&nbsp;+ Fixed a typo in previous update</p>
-          <p>The new mobile view uses tutorial code from sitepoint.com. They are
-            awesome!</p>
-          <p>If you didn't get a chance to read the v2.0 update log, click "<a href="updates.html">View
-              past updates</a>", also at the bottom of the updates sidebar.&nbsp;</p>
-          <p>2-25-17</p>
+          <p>codingkid.ninja v2.4</p>
+          <p>Skipped 2.3 because this is a (semi-) big release. </p>
+          <p>I added a "<a title="Reviews" href="reviews.html">Reviews</a>"
+            section. I put it in Projects and in the title bar, and I updated
+            the CSS file to account for a wider menu. I also removed the "work
+            in progress" notice on the home page. I might have changed a few
+            things that I don't remember, check the <a title="codingkid.ninja Github"
+              href="https://github.com/merlin04/codingkid.ninja">codingkid.ninja
+              Github page</a>. <br>
+          </p>
+          <p>3-25-17</p>
           <p><a href="updates.html">View past updates</a><br>
           </p>
         </div>
@@ -60,8 +62,7 @@
               <li> <img src="piboy-banner.png"> </li>
             </ul>
           </div>
-          <p> This is a work in progress site to replace <a href="http://codingkid.weebly.com">codingkid.weebly.com</a>.</p>
-          <p>codingkid.ninja is a website documenting my code and projects. </p>
+          <p>codingkid.ninja is a website documenting my code and projects.</p>
           <p>Looking for some great business cards? I recommend MOO. Use my code
             and get $15 off, which prices a pack of cards at $5!: <a href="https://refer.moo.com/s/et2sw">https://refer.moo.com/s/et2sw</a></p>
           <p>This is not a paid advertisement, although I get $15 off too!</p>
