--- a/updates.html
+++ b/updates.html
@@ -8,7 +8,18 @@
   </head>
   <body><span> </span>
     <h2><span>Updates</span></h2>
-    <p>codingkid.ninja v2.0</p>
+    <p>codingkid.ninja v2.1 </p>
+    <p>Just a day after v2.0, I have another update! Here's what changed:</p>
+    <p>&nbsp;+ Responsive design</p>
+    <p>&nbsp;+ Mobile device friendly</p>
+    <p>&nbsp;+ Updates page now uses shared CSS file</p>
+    <p>&nbsp;+ Fixed a typo in previous update</p>
+    <p>The new mobile view uses tutorial code from sitepoint.com. They are
+      awesome!</p>
+    <p>If you didn't get a chance to read the v2.0 update log, click "<a href="file:///home/benjamin/codingkid-bluegriffon-2.0/updates.html">View
+        past updates</a>", also at the bottom of the updates sidebar.&nbsp;</p>
+    2-25-17<br>
+    <hr>codingkid.ninja v2.0
     <p>I have been trying to make the codingkid.ninja website look better. After
       lots of work, I have come up with what you see here. Here is what changed:</p>
     <p>&nbsp;+ Changed "Stuff" to "<a href="stuff.html">Projects</a>"</p>
