--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
     <ul class="navigation">
       <li class="nav-item"><a href="index.html">Home</a></li>
       <li class="nav-item"><a href="stuff.html">Projects</a></li>
+      <li class="nav-item"><a href="reviews.html">Reviews</a></li>
       <li class="nav-item"><a href="https://github.com/merlin04">Github</a></li>
       <li class="nav-item"><a href="Hello%20World%21.html">Test page</a></li>
       <li class="nav-item"><a href="http://codingkid.weebly.com">Old site</a></li>
@@ -20,7 +21,8 @@
       <div id="header">
         <h3 style="text-align: left;" class="whatdoicallit"><img class="logo" src="mb1.svg"
             title="codingkid.ninja" alt="codingkid.ninja logo"><a href="index.html">Home</a>&nbsp;|&nbsp;
-          <a href="stuff.html">Projects</a>&nbsp;|&nbsp; <a href="https://github.com/Merlin04">Github</a><span
+          <a title="Projects" href="stuff.html"> Projects</a>&nbsp;|&nbsp;
+          <a title="Reviews" href="reviews.html">Reviews</a>&nbsp;|&nbsp; <a href="https://github.com/Merlin04">Github</a><span
             style="color: #0000ee;">&nbsp;</span> |&nbsp; <a href="Hello%20World%21.html">Test
             page</a>&nbsp;|&nbsp; <a href="http://codingkid.weebly.com">Old
             site</a> </h3>
