--- a/stuff.html
+++ b/stuff.html
@@ -11,44 +11,47 @@
     <ul class="navigation">
       <li class="nav-item"><a href="index.html">Home</a></li>
       <li class="nav-item"><a href="stuff.html">Projects</a></li>
+      <li class="nav-item"><a href="reviews.html">Reviews</a></li>
       <li class="nav-item"><a href="https://github.com/merlin04">Github</a></li>
       <li class="nav-item"><a href="Hello%20World%21.html">Test page</a></li>
       <li class="nav-item"><a href="http://codingkid.weebly.com">Old site</a></li>
     </ul>
     <input id="nav-trigger" class="nav-trigger" type="checkbox"> <label for="nav-trigger"></label>
     <div class="site-wrap">
-    <div id="header">
-      <h3 style="text-align: left;" class="whatdoicallit"><img class="logo" src="mb1.svg"
-          title="codingkid.ninja" alt="codingkid.ninja logo"><a href="index.html">Home</a>&nbsp;|
-        Projects&nbsp;|&nbsp; <a href="https://github.com/Merlin04">Github</a><span
-          style="color: #0000ee;">&nbsp;</span> |&nbsp; <a href="Hello%20World%21.html">Test
-          page</a>&nbsp;|&nbsp; <a href="http://codingkid.weebly.com">Old site</a>
-      </h3>
-      <h3 style="text-align: center;" class="hamburger-bar">codingkid.ninja</h3>
-    </div>
-    <p><span>My various projects. <br>
-      </span></p>
-    <a href="usbchuck.html"><img style="width: 299px; height: 224px;" title="USBChuck"
-        alt="USBChuck logo. " src="usbchuck.png"></a><span><br>
-      USBChuck is a USB Wii Nunchuk. See more <a href="usbchuck.html">here</a>.
-      <br>
-      <br>
-      <a href="isec.html"><img style="width: 297px; height: 222px;" title="iSec Capture"
-          alt="iSec Capture Logo" src="isec.png"></a><br>
-      (ARTICLE IN BETA) iSec Capture is a Raspberry Pi-powered IoT security
-      camera. See more <a href="isec.html">here</a>. <br>
-      <br>
-      <img title="Pi Boy Advance" alt="Game Boy Advance Raspberry Pi Thingy" src="gba.png"><br>
-      Pi Boy Advance is a Raspberry Pi based handheld console in a Game Boy
-      Advance shell, inspired by the <a href="http://sudomod.com">Game Boy Zero</a>.
-      Page coming soon!<br>
-      <strong><br>
-        Other not-as-important projects:</strong><br>
-      &nbsp;- <a href="poly.html">Dividing polynomials reference</a><br>
-      &nbsp;- <a href="logic.html">"Logical Increments" style chart for Game
-        Boy Zero</a> (Unfinished, may never be finished. I have many other
-      projects to work on!)<br>
-    </span>
-    </div>
+      <div id="header">
+        <h3 style="text-align: left;" class="whatdoicallit"><img class="logo" src="mb1.svg"
+            title="codingkid.ninja" alt="codingkid.ninja logo"><a href="index.html">Home</a>&nbsp;|
+          Projects |&nbsp; <a title="Reviews" href="reviews.html">Reviews</a>&nbsp;|&nbsp;
+          <a href="https://github.com/Merlin04">Github</a><span style="color: #0000ee;">&nbsp;</span>
+          |&nbsp; <a href="Hello%20World%21.html">Test page</a>&nbsp;|&nbsp; <a
+            href="http://codingkid.weebly.com">Old site</a> </h3>
+        <h3 style="text-align: center;" class="hamburger-bar">codingkid.ninja</h3>
+      </div>
+      <p><span>My various projects. <br>
+        </span></p>
+      <a href="reviews.html"><img style="width: 299px; height: 224px;" title="Reviews"
+          alt="Reviews logo. " src="reviews.png"></a>
+      <p><a href="reviews.html">Reviews of stuff.</a></p>
+      <a href="usbchuck.html"><img style="width: 299px; height: 224px;" title="USBChuck"
+          alt="USBChuck logo. " src="usbchuck.png"></a><span><br>
+        USBChuck is a USB Wii Nunchuk. See more <a href="usbchuck.html">here</a>.
+        <br>
+        <br>
+        <a href="isec.html"><img style="width: 297px; height: 222px;" title="iSec Capture"
+            alt="iSec Capture Logo" src="isec.png"></a><br>
+        (ARTICLE IN BETA) iSec Capture is a Raspberry Pi-powered IoT security
+        camera. See more <a href="isec.html">here</a>. <br>
+        <br>
+        <img title="Pi Boy Advance" alt="Game Boy Advance Raspberry Pi Thingy" src="gba.png"><br>
+        Pi Boy Advance is a Raspberry Pi based handheld console in a Game Boy
+        Advance shell, inspired by the <a href="http://sudomod.com">Game Boy
+          Zero</a>. Page coming soon!<br>
+        <strong><br>
+          Other not-as-important projects:</strong><br>
+        &nbsp;- <a href="poly.html">Dividing polynomials reference</a><br>
+        &nbsp;- <a href="logic.html">"Logical Increments" style chart for Game
+          Boy Zero</a> (Unfinished, may never be finished. I have many other
+        projects to work on!)<br>
+      </span> </div>
   </body>
 </html>
