--- a/usbchuck.html
+++ b/usbchuck.html
@@ -11,20 +11,21 @@
     <ul class="navigation">
       <li class="nav-item"><a href="index.html">Home</a></li>
       <li class="nav-item"><a href="stuff.html">Projects</a></li>
+      <li class="nav-item"><a href="reviews.html">Reviews</a></li>
       <li class="nav-item"><a href="https://github.com/merlin04">Github</a></li>
       <li class="nav-item"><a href="Hello%20World%21.html">Test page</a></li>
       <li class="nav-item"><a href="http://codingkid.weebly.com">Old site</a></li>
     </ul>
-    <input id="nav-trigger" class="nav-trigger" type="checkbox"> <label
-      for="nav-trigger"></label>
+    <input id="nav-trigger" class="nav-trigger" type="checkbox"> <label for="nav-trigger"></label>
     <div class="site-wrap">
       <div id="header">
         <h3 style="text-align: left;" class="whatdoicallit"><img class="logo" src="mb1.svg"
-            title="codingkid.ninja" alt="codingkid.ninja logo"><a
-            href="index.html">Home</a>&nbsp;|&nbsp; <a href="stuff.html">Projects</a>&nbsp;|&nbsp;
-          <a href="https://github.com/Merlin04">Github</a><span style="color: #0000ee;">&nbsp;</span>
-          |&nbsp; <a href="Hello%20World%21.html">Test page</a>&nbsp;|&nbsp; <a
-            href="http://codingkid.weebly.com">Old site</a> </h3>
+            title="codingkid.ninja" alt="codingkid.ninja logo"><a href="index.html">Home</a>&nbsp;|&nbsp;
+          <a title="Projects" href="stuff.html"> Projects</a>&nbsp;|&nbsp;
+          <a title="Reviews" href="reviews.html">Reviews</a>&nbsp;|&nbsp; <a href="https://github.com/Merlin04">Github</a><span
+            style="color: #0000ee;">&nbsp;</span> |&nbsp; <a href="Hello%20World%21.html">Test
+            page</a>&nbsp;|&nbsp; <a href="http://codingkid.weebly.com">Old
+            site</a> </h3>
         <h3 style="text-align: center;" class="hamburger-bar">codingkid.ninja</h3>
       </div>
       <p><span style="font-family: Comfortaa, Verdana;"><br>
